@@ -139,12 +139,8 @@ bool PlayerAccessInfo::isRegistered() const {
   return userExists(regName);
 }
 
-bool PlayerAccessInfo::isIdentifyRequired() {
-  return getUserInfo(regName).hasPerm(requireIdentify);
-}
-
 bool PlayerAccessInfo::isAllowedToEnter() {
-  return verified || !isRegistered() || !isIdentifyRequired();
+  return verified || !isRegistered();
 }
 
 bool PlayerAccessInfo::isVerified() const{
@@ -414,7 +410,6 @@ std::string nameFromPerm(PlayerAccessInfo::AccessPerm perm)
     case PlayerAccessInfo::rejoin: return "rejoin";
     case PlayerAccessInfo::removePerms: return "removePerms";
     case PlayerAccessInfo::replay: return "replay";
-    case PlayerAccessInfo::requireIdentify: return "requireIdentify";
     case PlayerAccessInfo::say: return "say";
     case PlayerAccessInfo::sendHelp : return "sendHelp";
     case PlayerAccessInfo::setAll: return "setAll";
@@ -481,7 +476,6 @@ PlayerAccessInfo::AccessPerm permFromName(const std::string &name)
   if (name == "REJOIN") return PlayerAccessInfo::rejoin;
   if (name == "REMOVEPERMS") return PlayerAccessInfo::removePerms;
   if (name == "REPLAY") return PlayerAccessInfo::replay;
-  if (name == "REQUIREIDENTIFY") return PlayerAccessInfo::requireIdentify;
   if (name == "SAY") return PlayerAccessInfo::say;
   if (name == "SENDHELP") return PlayerAccessInfo::sendHelp;
   if (name == "SETALL") return PlayerAccessInfo::setAll;
